# zphoto

./: .gitignore  ChangeLog  EfontSerifB.fdb  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  alist.c  config.c  config.h.in  configure  configure.in  exif.c  flash.c  image.cpp  main.cpp  progress.c  template.c  util.c  wxzphoto.cpp  wxzphoto.h  wxzphoto.rc  wxzphoto.wxg  zphoto.c  zphoto.h
doc/: Makefile.am  Makefile.in  zphoto-ja.html  zphoto.html
doc/images/: Makefile.am  Makefile.in
icon/: Makefile.am  Makefile.in  wxzphoto.xpm
m4/: ChangeLog  Makefile.am  Makefile.in
po/: ChangeLog  Makevars  POTFILES.in  ja.gmo  ja.po  ja_JP.SJIS.gmo  ja_JP.SJIS.po  zphoto.pot
support/: Makefile.am  Makefile.in
templates/: Makefile.in
templates/default/: .photo.html  Makefile.am  Makefile.in  zphoto.css
templates/default/all/: Makefile.am  Makefile.in
templates/default/en/: Makefile.am  Makefile.in  index.html  noflash.html  zoom.js
templates/default/ja/: Makefile.am  Makefile.in  css-colors.txt  flash-colors.txt  index.html  noflash.html  zoom.js
